welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:9: error: Boolean does not take parameters
    else (b<10) {
                ^max1020:17: error: Boolean does not take parameters
    else (a<10) {
                ^