welcome.lessons.welcome.bat.bool1.Max1020.scala.code
def max1020(a:Int, b:Int):Int = {
  if (a<21 && a>9 && b<21 && b>9) {
    return Math.max(a,b)
  }
  if (a<21 && a>9) {
    if (b>20){
      return a
    }
    else (b<10) {
      return a
    }
  }
  if (b<21 && b>9) {
    if (a>20){
      return b
    }
    else (a<10) {
      return b
    }
    
  }
  else return 0
}